# issues-insights-tracker

./: README.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts
.github/workflows/: ci.yml
backend/: .coverage  .env.example  Dockerfile  README.md  alembic.ini  checkws.py  docker-compose.dev.yml  nginx.conf  pyproject.toml  requirements.txt  start.sh  test.db
backend/alembic/: env.py
backend/alembic/versions/: 413e73bb9052_initial_migration.py
backend/app/: dependencies.py  main.py
backend/app/api/v1/: auth.py  files.py  issues.py  notifications.py  stats.py  users.py
backend/app/core/: config.py  permissions.py  security.py  websocket.py
backend/app/models/: __init__.py  daily_stats.py  file.py  issue.py  user.py
backend/app/schemas/: __init__.py  auth.py  file.py  issue.py  stats.py  user.py
backend/app/services/: email.py
backend/app/workers/: celery_app.py  email_tasks.py  tasks.py
backend/scripts/: init_db.py
backend/tests/: conftest.py  test_auth.py  test_email.py  test_files.py  test_issues.py  test_permissions.py  test_tasks.py  test_websocket.py
backend/uploads/: 5365f5ea-61b7-4ebd-b9f8-ce2961309b5e.txt
e2e/: happy-path.spec.ts
frontend/: .env.example  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/pages/: CreateIssue.tsx  Dashboard.tsx  IssueDetail.tsx  Issues.tsx  Users.tsx
test-results/: .last-run.json
test-results/e2e-happy-path-E2E-Flow-Lo-1ede0-ogin-create-issue-see-issue/: error-context.md  video.webm
(+25 files in other folders)
